--- a/lib/language/ar.json
+++ b/lib/language/ar.json
@@ -98,7 +98,7 @@
   "From here you can add an estate.": "من هنا يمكنك إضافة منشآة.",
   "Select an Estate": "اختر منشآة",
   "Information in Arabic": "المعلومات بالعربية",
-  "Bio": "المواصفات",
+  "Bio": "المواصفات (إختياري)",
   "Legal information": "المعلومات القانونية",
   "Upload Facility Document (PDF)": "تحميل سجل تجاري المنشأة (PDF)",
   "Upload PDF": "تحميل ملف PDF",
@@ -107,22 +107,22 @@
   "Failed to upload image": "فشل في تحميل الصورة",
   "Tax Number": "الرقم الضريبي",
   "Menu": "القائمة",
-  "Enter Menu Link": "أدخل رابط القائمة",
+  "Enter Menu Link": "أدخل رابط القائمة (إختياري)",
   "Type of Restaurant": "نوع المطعم",
   "Entry allowed": "الدخول مسموح",
   "Sessions type": "نوع الجلسات",
-  "Valet Options": "خيارات خدمة صف السيارات",
+  "Valet Options": "خيارات خدمة صف السيارات (إختياري)",
   "Is there valet?": "هل توجد خدمة صف السيارات؟",
   "Valet with fees": "خدمة صف السيارات برسوم",
   "If valet with fees is not selected, valet service is free.": "إذا لم يتم اختيار خدمة صف السيارات برسوم، فإن الخدمة مجانية.",
-  "Kids Area Options": "خيارات منطقة الأطفال",
-  "Is there Kids Area?": "هل توجد منطقة للأطفال؟",
+  "Kids Area Options": "خيارات منطقة الأطفال (إختياري)",
+  "Is there Kids Area?": "هل توجد منطقة للأطفال؟ (إختياري)",
   "Hotel Amenities": "مرافق الفندق",
   "Is there Swimming Pool?": "هل يوجد حمام سباحة؟",
   "Is there Barber?": "هل يوجد حلاق؟",
   "Is there Massage?": "هل يوجد مساج؟",
   "Is there Gym?": "هل يوجد صالة رياضية؟",
-  "Location information": "معلومات الموقع",
+  "Location information": "معلومات الموقع. (مطلوب)",
   "What We have ?": "ماذا لدينا؟",
   "Information in English": "المعلومات بالإنجليزية",
   "Country": "الدولة",
@@ -289,7 +289,7 @@
   "Private sessions": "الجلسات الخاصة",
   "Is there Hookah?": "هل يوجد شيشة؟",
   "Is there Buffet?": "هل يوجد بوفيه؟",
-  "Additionals": "إضافات",
+  "Additionals": "إضافات (إختياري)",
   "Hotel": "فندق",
   "Restaurant": "مطعم",
   "Coffee": "مقهى",
@@ -345,7 +345,7 @@
   "PremiumPlusTitle": "مميز+",
   "PremiumPlusSubtitle": "قم بإضافة ما يصل إلى 8 صور أو مقاطع فيديو في صفحة المنشور لعرض إعلانات وعروض ملكيتك للعملاء.",
   "Is Smoking Allowed?": "هل مسموح بالتدخين؟",
-  "Smoking Area?": "منطقة تدخين؟",
+  "Smoking Area?": "منطقة تدخين؟ (إختياري)",
   "Is there Jacuzzi?": "هل يوجد جاكوزي في الغرفة؟",
   "Your post is under process for review": "منشورك قيد المراجعة",
   "Post Added Successfully": "تمت إضافة المنشور بنجاح",
@@ -521,7 +521,7 @@
   "You have not added any estates": "لم تقم بإضافة أي منشأة",
   "This estate has been rejected.": "تم رفض هذه المنشأة.",
   "Phone number": "رقم الهاتف",
-  "Enter your Phone Number": "أدخل رقم هاتفك",
+  "Enter your Phone Number": "أدخل رقم هاتفك (إختياري)",
   "Additional Services (Optional)": "الخدمات الإضافية (اختياري)",
   "Service Name": "اسم الخدمة",
   "Service Price": "سعر الخدمة",
@@ -622,7 +622,7 @@
   "Configured Layout ID:": "معرّف المخطط المُهيأ:",
   "Enter Room Size": "أدخل أبعاد الغرفة",
   "Width (meters)": "العرض (بالمتر)",
-  "Height (meters)": "الارتفاع (بالمتر)",
+  "Height (meters)": "الطول (بالمتر)",
   "Start Building": "ابدأ البناء",
   "Height & Width must be entered": "يجب إدخال الارتفاع والعرض",
   "table": "طاولة",
@@ -643,8 +643,51 @@
   "Pick default color": "اختر اللون الافتراضي",
   "Room": "الغرفة",
   "No spots added. Please add spots before saving.": "لم تتم إضافة أي عناصر. يرجى إضافة العناصر قبل الحفظ.",
-  "Floor plan ready": "مخطط الطابق جاهز",
+  "Floor plan ready": "مخطط الطابق جاهز, إضغط على حفظ لحفظ تغيرات مخطط الطابق",
   "Change Color": "تغيير اللون",
   "Decrease Size": "تصغير الحجم",
-  "Increase Size": "تكبير الحجم"
+  "Increase Size": "تكبير الحجم",
+  "oval": "بيضاوي",
+  "Rotate Right": "تدوير لليمين",
+  "Rotate Left": "تدوير لليسار",
+  "Cannot place on top of another item": "لا يمكن وضعه فوق عنصر آخر",
+  "Include Outdoor Seating": "تضمين الجلوس الخارجي",
+  "Outdoor Seating": "الجلوس الخارجي",
+  "Select outdoor wall(s):": "اختر الجدار الخارجي:",
+  "north": "الشمال",
+  "south": "الجنوب",
+  "east": "الشرق",
+  "west": "الغرب",
+  "Deleting Account": "جاري حذف الحساب",
+  "Please don't close the application until your account is deleted successfully": "يرجى عدم إغلاق التطبيق حتى يتم حذف حسابك بنجاح",
+  "Your password is incorrect": "كلمة المرور غير صحيحة",
+  "Include Second Floor":"تضمين الطابق الثاني",
+  "Select second floor area(s):":"حدد منطقة الطابق الثاني:",
+  "Floor":"طابق",
+  "Second Floor Area":"منطقة الطابق الثاني",
+  "Select second floor wall(s):": "حدد جدار الطابق الثاني",
+  "Second Floor": "الطابق الثاني",
+  "Outdoor": "خارجي",
+  "Indoor": "داخلي",
+  "Clear which layer?": "مسح أي طبقة؟",
+  "Select at least one Outdoor side": "اختر جانبًا خارجيًا واحدًا على الأقل",
+  "Select at least one Second Floor side": "اختر جانبًا واحدًا على الأقل في الطابق الثاني",
+  "Nearby Riyadh Metro (Optional)":"مترو الرياض القريب (اختياري)",
+  "Select metro line(s) close to the estate:":"اختر خط المترو الأقرب للعقار:",
+  "Nearby Riyadh Metro": "مترو الرياض القريب",
+  "Metro selection incomplete":"اختيار المترو غير مكتمل",
+  "You selected at least one metro line but did not choose any station on it.\n\nDo you want to continue without saving any Metro info?":"لقد اخترت خط مترو واحدًا على الأقل ولكنك لم تختر أي محطة فيه.\n\nهل تريد المتابعة بدون حفظ أي معلومات عن المترو؟",
+  "Choose stations":"اختر المحطات",
+  "Continue":"متابعة",
+  "No metro lines selected.":"لم يتم اختيار أي خطوط مترو.",
+  "Selected Lines: ":"الخطوط المختارة: ",
+  "Stations: ":"المحطات: ",
+  "You selected at least one metro line but did not choose any station on it.":"لقد اخترت خط مترو واحدًا على الأقل ولكنك لم تختر أي محطة فيه.",
+  "Do you want to continue without saving any Metro info?":"هل تريد المتابعة بدون حفظ أي معلومات عن المترو؟",
+  "You selected a metro line but no stations.":"لقد اخترت خط مترو ولكن بدون أي محطات.",
+  "Photographer Visit (Optional)":"زيارة المصور (اختياري)",
+  "Choose a date for photography":"اختر تاريخ التصوير",
+  "Tap to select a date":"اضغط لاختيار تاريخ",
+  "Available time":"الوقت المتاح",
+  "screen": "شاشة تلفاز"
 }
