--- a/lib/language/en.json
+++ b/lib/language/en.json
@@ -103,7 +103,7 @@
   "From here you can add an estate.":"From here you can add an estate.",
   "Select an Estate": "Select an Estate",
   "Information in Arabic":"Information in Arabic",
-  "Bio":"Bio",
+  "Bio":"Bio (Optional)",
   "Legal information":"Legal information",
   "Upload Facility Document (PDF)": "Upload Commercial Registration (PDF)",
   "Upload Image":"Upload Image",
@@ -111,22 +111,22 @@
   "Failed to upload image":"Failed to upload image",
   "Tax Number":"Tax Number",
   "Menu":"Menu",
-  "Enter Menu Link":"Enter Menu Link",
+  "Enter Menu Link":"Enter Menu Link (Optional)",
   "Type of Restaurant":"Type of Restaurant",
   "Entry allowed":"Entry allowed",
   "Sessions type": "Sessions type",
-  "Valet Options":"Valet Options",
+  "Valet Options":"Valet Options (Optional)",
   "Is there valet?":"Is there valet?",
   "Valet with fees":"Valet with fees",
   "If valet with fees is not selected, valet service is free.":"If valet with fees is not selected, valet service is free.",
-  "Kids Area Options":"Kids Area Options",
-  "Is there Kids Area?":"Is there Kids Area?",
+  "Kids Area Options":"Kids Area Options (Optional)",
+  "Is there Kids Area?":"Is there Kids Area? (Optional)",
   "Hotel Amenities":"Hotel Amenities",
   "Is there Swimming Pool?":"Is there Swimming Pool?",
   "Is there Barber?":"Is there Barber?",
   "Is there Massage?":"Is there Massage?",
   "Is there Gym?":"Is there Gym?",
-  "Location information":"Location information",
+  "Location information":"Location information. (Required)",
   "What We have ?":"What We have ?",
   "Information in English":"Information in English",
   "Country":"Country",
@@ -291,7 +291,7 @@
   "Private sessions":"Private sessions",
   "Is there Hookah?":"Is there Hookah?",
   "Is there Buffet?":"Is there Buffet?",
-  "Additionals":"Additionals",
+  "Additionals":"Additionals (Optional)",
   "Hotel Apartments":"Hotel Apartments",
   "Price": "Price",
   "BioEn": "BioEn",
@@ -344,7 +344,7 @@
   "PremiumPlusTitle": "Premium Plus",
   "PremiumPlusSubtitle": "Add up to 8 images or videos on the post page to showcase your estate's ads and offers to customers.",
   "Is Smoking Allowed?":"Is Smoking Allowed?",
-  "Smoking Area?":"Smoking Area?",
+  "Smoking Area?":"Smoking Area? (Optional)",
   "Is there Jacuzzi?":"Is there Jacuzzi in the room?",
   "Your post is under process for review":"Your post is under process for review",
   "Post Added Successfully":"Post Added Successfully",
@@ -520,7 +520,7 @@
   "This estate has been rejected.": "This estate has been rejected.",
   "You have added 1 Post in a month. You can't add more!": "You have added 1 Post in a month. You can't add more!",
   "Phone number": "Phone number",
-  "Enter your Phone Number": "Enter your Phone Number",
+  "Enter your Phone Number": "Enter your Phone Number (Optional)",
   "Additional Services (Optional)":"Additional Services (Optional)",
   "Service Name":"Service Name",
   "Service Price":"Service Price",
@@ -642,8 +642,51 @@
   "Pick default color": "Pick default color",
   "Room": "Room",
   "No spots added. Please add spots before saving.": "No spots added. Please add spots before saving.",
-  "Floor plan ready": "Floor plan ready",
+  "Floor plan ready": "Floor plan ready. Click on save to save your floor plan changes",
   "Change Color": "Change Color",
   "Decrease Size": "Decrease Size",
-  "Increase Size": "Increase Size"
+  "Increase Size": "Increase Size",
+  "oval": "Oval",
+  "Rotate Right": "Rotate Right",
+  "Rotate Left": "Rotate Left",
+  "Cannot place on top of another item": "Cannot place on top of another item",
+  "Include Outdoor Seating": "Include Outdoor Seating",
+  "Outdoor Seating": "Outdoor Seating",
+  "Select outdoor wall(s):": "Select outdoor wall(s):",
+  "north": "North",
+  "south": "South",
+  "east": "East",
+  "west": "West",
+  "Deleting Account": "Deleting Account",
+  "Please don't close the application until your account is deleted successfully": "Please don't close the application until your account is deleted successfully",
+  "Your password is incorrect": "Your password is incorrect",
+  "Include Second Floor":"Include Second Floor",
+  "Select second floor area(s):":"Select second floor area(s):",
+  "Floor":"Floor",
+  "Second Floor Area":"Second Floor Area",
+  "Select second floor wall(s):": "Select second floor wall(s):",
+  "Second Floor": "Second Floor",
+  "Outdoor": "Outdoor",
+  "Indoor": "Indoor",
+  "Clear which layer?": "Clear which layer?",
+  "Select at least one Outdoor side": "Select at least one Outdoor side",
+  "Select at least one Second Floor side": "Select at least one Second Floor side",
+  "Nearby Riyadh Metro (Optional)":"Nearby Riyadh Metro (Optional)",
+  "Select metro line(s) close to the estate:":"Select metro line(s) close to the estate:",
+  "Nearby Riyadh Metro": "Nearby Riyadh Metro",
+  "Metro selection incomplete":"Metro selection incomplete",
+  "You selected at least one metro line but did not choose any station on it.\n\nDo you want to continue without saving any Metro info?":"You selected at least one metro line but did not choose any station on it.\n\nDo you want to continue without saving any Metro info?",
+  "Choose stations":"Choose stations",
+  "Continue":"Continue",
+  "No metro lines selected.":"No metro lines selected.",
+  "Selected Lines: ":"Selected Lines: ",
+  "Stations: ":"Stations: ",
+  "You selected at least one metro line but did not choose any station on it.":"You selected at least one metro line but did not choose any station on it.",
+  "Do you want to continue without saving any Metro info?":"Do you want to continue without saving any Metro info?",
+  "You selected a metro line but no stations.":"You selected a metro line but no stations.",
+  "Photographer Visit (Optional)":"Photographer Visit (Optional)",
+  "Choose a date for photography":"Choose a date for photography",
+  "Tap to select a date":"Tap to select a date",
+  "Available time":"Available time",
+  "screen": "Tv Screen"
 }
