--- a/lib/language/en.json
+++ b/lib/language/en.json
@@ -688,5 +688,51 @@
   "Choose a date for photography":"Choose a date for photography",
   "Tap to select a date":"Tap to select a date",
   "Available time":"Available time",
-  "screen": "Tv Screen"
+  "screen": "Tv Screen",
+  "Choose control scope": "Choose control scope",
+  "Estate": "Estate",
+  "-- All estates --": "-- All estates --",
+  "PIN": "PIN",
+  "Enter the PIN": "Enter the PIN",
+  "Ask the owner for this estate's PIN (or the “All estates” PIN for owners).": "Ask the owner for this estate's PIN (or the “All estates” PIN for owners).",
+  "Required": "Required",
+  "Incorrect PIN": "Incorrect PIN",
+  "Enter": "Enter",
+  "Change scope": "Change scope",
+  "Scope will update once you return to Home.": "Scope will update once you return to Home.",
+  "Switch the estate you manage": "Switch the estate you manage",
+  "You're the owner": "You're the owner",
+  "Create an All estates PIN. Share it only with trusted owners/admins. For managers, add per‑estate PINs under Access PINs later.": "Create an All estates PIN. Share it only with trusted owners/admins. For managers, add per‑estate PINs under Access PINs later.",
+  "All estates PIN": "All estates PIN",
+  "Enter a PIN (e.g. 1234)": "Enter a PIN (e.g. 1234)",
+  "Access required": "Access required",
+  "You don't have access yet. Ask the owner to add your PIN under Access PINs.": "You don't have access yet. Ask the owner to add your PIN under Access PINs.",
+  "Create an All estates PIN. Share it only with trusted owners/admins. For managers, add per-estate PINs under Access PINs later.": "Create an All estates PIN. Share it only with trusted owners/admins. For managers, add per-estate PINs under Access PINs later.",
+  "WelcomeName": "Welcome, {name}!",
+  "WelcomeBody": "We’re glad to have you on board 🎉",
+  "You cannot add a new estate at the moment.": "You cannot add a new estate at the moment.",
+  "Add post for your estate": "Add post for your estate",
+  "Change estate name?": "Change estate name?",
+  "Are you sure you want to change the estate name? If you proceed, your estate will go under process for review": "Are you sure you want to change the estate name? If you proceed, your estate will go under process for review",
+  "Yes, continue": "Yes, continue",
+  "International Restaurant": "International cuisine",
+  "Redak Assistant": "Redak Assistant",
+  "Ask a question...": "Ask a question...",
+  "Chat Bot": "Chat Bot",
+  "Security": "Security",
+  "Set / Change PIN": "Set / Change PIN",
+  "Verify Phone": "Verify Phone",
+  "Use E.164 format, e.g. +9665XXXXXXXX": "Use E.164 format, e.g. +9665XXXXXXXX",
+  "Send Code": "Send Code",
+  "Verify & Delete": "Verify & Delete",
+  "Code sent": "Code sent",
+  "Invalid code": "Invalid code",
+  "Please request the code first": "Please request the code first",
+  "Enter the OTP code": "Enter the OTP code",
+  "Phone not found": "Phone not found",
+  "We couldn't find a phone number linked to your account.": "We couldn't find a phone number linked to your account.",
+  "Failed to send code": "Failed to send code",
+  "An authentication error occurred": "An authentication error occurred",
+  "Sending code...": "Sending code..."
+
 }
